# amelie

./: .gitignore  LICENSE  README.md  Setup.hs  TODO  amelie.cabal  amelie.conf  amelie.conf.example  amelie.dump
httpd/: nginx.conf
src/: Main.hs
src/Amelie/: Config.hs  DB.hs  Expiry.hs  HTML.hs  Highlight.hs  Import.hs  Links.hs  Pages.hs  Routes.hs  Templates.hs  Types.hs  Utils.hs
src/Amelie/Pages/: Error.hs
src/Web/: CodePad.hs  Codepad.hs
templates/: annotations.html  browse.html  control.html  hints.html  info_paste_hlint.html  new.html  output.html  paste.html  pastes.html  template.html
wwwroot/: amelie.css  hpaste.css  hpaste.js  index.html
