Name:                amelie
Version:             0.1
Synopsis:            A paste web site.
Description:         A simple paste web site based on FastCGI and PostgreSQL.
Homepage:            http://github.com/chrisdone/amelie
License:             GPL
License-file:        LICENSE
Author:              Chris Done <chrisdone@gmail.com>
Maintainer:          chrisdone@gmail.com
Copyright:           2010 Chris Done 
Category:            Web
Build-type:          Custom
Extra-source-files:  README.md, amelie.conf.example, httpd/nginx.conf, amelie.dump,
                     templates/browse.html,templates/control.html,
                     templates/info_paste.html,templates/paste.html,templates/pastes.html,
                     templates/template.html,
                     wwwroot/hpaste.css,wwwroot/hpaste.js,wwwroot/hpaste.png,
                     wwwroot/input-bg.png,wwwroot/jquery-1.4.2.min.js,
                     wwwroot/jquery.cookie.js
Cabal-version:       >=1.2

Executable amelie.fcgi
  Main-is:           Main.hs
  Hs-source-dirs:    src
  Ghc-Options:       -threaded -O2 -Wall
  Build-depends:     base               >= 4 && <5
                    ,formlets           == 0.7.*
                    ,xhtml              == 3000.2.*
                    ,highlighting-kate  == 0.2.*
                    ,blaze-html         == 0.3.*
                    ,safe               == 0.2.*
                    ,fastcgi            == 3001.0.*
                    ,cgi                == 3001.1.*
                    ,Takusen            == 0.8.*
                    ,text               == 0.10.*
                    ,split              == 0.1.*
                    ,ConfigFile         == 1.0.*
                    ,directory          == 1.0.*
                    ,mtl                == 1.1.*
                    ,applicative-extras == 0.1.*
                    ,filepath           == 1.1.*
                    ,stringsearch       == 0.3.*
                    ,bytestring         == 0.9.*
                    ,time               == 1.1.*
                    ,time-extras        == 1.1.*
                    ,old-locale         == 1.0.*
                    ,MissingH           == 1.1.*
                    ,utf8-string        == 0.3.*
                    ,hlint              == 1.7.*
                    ,higherorder        == 0.*
                    ,json               == 0.4.*
                    ,tagsoup            == 0.10.*
                    ,curl               == 1.3.*
                    ,network            == 2.2.*
